DROP DATABASE IF EXISTS escola_db;
CREATE DATABASE escola_db;
USE escola_db;

CREATE TABLE cursos (
    id_curso INT PRIMARY KEY,
    nome VARCHAR(120) NOT NULL,
    descricao VARCHAR(255) NOT NULL
);

CREATE TABLE modulos (
    id_modulo INT PRIMARY KEY,
    id_curso INT NOT NULL,
    nome VARCHAR(120) NOT NULL,
    ordem INT NOT NULL,
    FOREIGN KEY (id_curso) REFERENCES cursos(id_curso)
);

CREATE TABLE professores (
    id_professor INT PRIMARY KEY,
    nome VARCHAR(100) NOT NULL,
    email VARCHAR(120) UNIQUE NOT NULL,
    area VARCHAR(80) NOT NULL
);

CREATE TABLE modulo_professor (
    id_modulo_professor INT PRIMARY KEY,
    id_modulo INT NOT NULL,
    id_professor INT NOT NULL,
    FOREIGN KEY (id_modulo) REFERENCES modulos(id_modulo),
    FOREIGN KEY (id_professor) REFERENCES professores(id_professor)
);

CREATE TABLE turmas (
    id_turma INT PRIMARY KEY,
    id_curso INT NOT NULL,
    nome_turma VARCHAR(60) NOT NULL,
    turno VARCHAR(20) NOT NULL,
    periodo VARCHAR(20) NOT NULL,
    capacidade INT NOT NULL,
    FOREIGN KEY (id_curso) REFERENCES cursos(id_curso)
);

CREATE TABLE alunos (
    id_aluno INT PRIMARY KEY,
    nome VARCHAR(100) NOT NULL,
    email VARCHAR(120) UNIQUE NOT NULL,
    data_nascimento DATE,
    cidade VARCHAR(80) NOT NULL
);

CREATE TABLE matriculas (
    id_matricula INT PRIMARY KEY,
    id_aluno INT NOT NULL,
    id_turma INT NOT NULL,
    data_matricula DATE NOT NULL,
    status VARCHAR(20) NOT NULL,
    FOREIGN KEY (id_aluno) REFERENCES alunos(id_aluno),
    FOREIGN KEY (id_turma) REFERENCES turmas(id_turma)
);

CREATE TABLE ofertas_modulo (
    id_oferta INT PRIMARY KEY,
    id_turma INT NOT NULL,
    id_modulo INT NOT NULL,
    id_professor INT NOT NULL,
    turno VARCHAR(20) NOT NULL,
    data_inicio DATE NOT NULL,
    data_fim DATE NOT NULL,
    FOREIGN KEY (id_turma) REFERENCES turmas(id_turma),
    FOREIGN KEY (id_modulo) REFERENCES modulos(id_modulo),
    FOREIGN KEY (id_professor) REFERENCES professores(id_professor)
);

CREATE TABLE notas_modulo (
    id_nota INT PRIMARY KEY,
    id_matricula INT NOT NULL,
    id_modulo INT NOT NULL,
    nota1 DECIMAL(4,2) NOT NULL,
    nota2 DECIMAL(4,2) NOT NULL,
    nota3 DECIMAL(4,2) NOT NULL,
    media DECIMAL(4,2) NOT NULL,
    FOREIGN KEY (id_matricula) REFERENCES matriculas(id_matricula),
    FOREIGN KEY (id_modulo) REFERENCES modulos(id_modulo)
);
INSERT INTO cursos (id_curso, nome, descricao) VALUES
(1, 'Desenvolvimento Full Stack', 'Curso completo de formação em desenvolvimento web');
INSERT INTO modulos (id_modulo, id_curso, nome, ordem) VALUES
(1, 1, 'Lógica de Programação I', 1),
(2, 1, 'HTML e CSS', 2),
(3, 1, 'JavaScript e DOM', 3),
(4, 1, 'Banco de Dados e SQL', 4),
(5, 1, 'Back-end com Node.js', 5),
(6, 1, 'Frontend com React', 6),
(7, 1, 'APIs e Integração', 7),
(8, 1, 'Infraestrutura e Deploy', 8);
INSERT INTO professores (id_professor, nome, email, area) VALUES
(1, 'Ana Paula Souza', 'ana.souza@iteam.edu.br', 'Banco de Dados'),
(2, 'Bruno Lima', 'bruno.lima@iteam.edu.br', 'Front-end'),
(3, 'Carla Mendes', 'carla.mendes@iteam.edu.br', 'Lógica de Programação'),
(4, 'Diego Almeida', 'diego.almeida@iteam.edu.br', 'Back-end'),
(5, 'Elaine Costa', 'elaine.costa@iteam.edu.br', 'APIs'),
(6, 'Fernando Rocha', 'fernando.rocha@iteam.edu.br', 'Infraestrutura'),
(7, 'Gabriela Nunes', 'gabriela.nunes@iteam.edu.br', 'Front-end'),
(8, 'Heitor Pires', 'heitor.pires@iteam.edu.br', 'Banco de Dados'),
(9, 'Isadora Freire', 'isadora.freire@iteam.edu.br', 'Lógica de Programação'),
(10, 'João Victor Maia', 'joao.maia@iteam.edu.br', 'Back-end');
INSERT INTO modulo_professor (id_modulo_professor, id_modulo, id_professor) VALUES
(1, 1, 3),
(2, 1, 9),
(3, 2, 2),
(4, 2, 7),
(5, 3, 2),
(6, 3, 7),
(7, 4, 1),
(8, 4, 8),
(9, 5, 4),
(10, 5, 10),
(11, 6, 2),
(12, 6, 7),
(13, 7, 5),
(14, 7, 10),
(15, 8, 6),
(16, 8, 4);
INSERT INTO turmas (id_turma, id_curso, nome_turma, turno, periodo, capacidade) VALUES
(1, 1, 'FULL-FS-N1', 'Noite', '2026.1', 30),
(2, 1, 'FULL-FS-V1', 'Tarde', '2026.1', 30);
INSERT INTO alunos (id_aluno, nome, email, data_nascimento, cidade) VALUES
(1, 'Adriana Nogueira', 'adriana.nogueira1@email.com', '2000-04-01', 'Caracaraí'),
(2, 'Alan Ribeiro', 'alan.ribeiro2@email.com', '2005-03-23', 'Boa Vista'),
(3, 'Aline Batista', 'aline.batista3@email.com', '2003-02-08', 'Boa Vista'),
(4, 'Amanda Queiroz', 'amanda.queiroz4@email.com', '1998-06-20', 'Boa Vista'),
(5, 'Anderson Martins', 'anderson.martins5@email.com', '2006-11-24', 'Alto Alegre'),
(6, 'Andreia Lopes', 'andreia.lopes6@email.com', '1998-10-01', 'Rorainópolis'),
(7, 'Arthur Freitas', 'arthur.freitas7@email.com', '2002-07-07', 'Boa Vista'),
(8, 'Bianca Moraes', 'bianca.moraes8@email.com', '1999-10-17', 'Alto Alegre'),
(9, 'Brenda Carvalho', 'brenda.carvalho9@email.com', '2007-01-23', 'Manaus'),
(10, 'Caio Henrique Santos', 'caio.henrique.santos10@email.com', '2003-05-06', 'Normandia'),
(11, 'Camila Ferreira', 'camila.ferreira11@email.com', '2002-11-17', 'Boa Vista'),
(12, 'Carlos Eduardo Lima', 'carlos.eduardo.lima12@email.com', '2002-11-23', 'Boa Vista'),
(13, 'Cecília Barros', 'cecília.barros13@email.com', '1998-06-18', 'Alto Alegre'),
(14, 'Cláudia Rezende', 'cláudia.rezende14@email.com', '2004-05-17', 'Boa Vista'),
(15, 'Daniela Azevedo', 'daniela.azevedo15@email.com', '2004-07-22', 'Alto Alegre'),
(16, 'Danilo Castro', 'danilo.castro16@email.com', '2000-05-19', 'Manaus'),
(17, 'Débora Viana', 'débora.viana17@email.com', '2007-01-10', 'Rorainópolis'),
(18, 'Diego Furtado', 'diego.furtado18@email.com', '2006-09-17', 'Manaus'),
(19, 'Eduarda Sales', 'eduarda.sales19@email.com', '2006-07-03', 'Boa Vista'),
(20, 'Elias Moura', 'elias.moura20@email.com', '2005-06-04', 'Manaus'),
(21, 'Elisa Fernandes', 'elisa.fernandes21@email.com', '2004-01-27', 'Normandia'),
(22, 'Emerson Duarte', 'emerson.duarte22@email.com', '2006-04-13', 'Boa Vista'),
(23, 'Estela Pires', 'estela.pires23@email.com', '2005-04-06', 'Boa Vista'),
(24, 'Fabiana Gomes', 'fabiana.gomes24@email.com', '2004-06-06', 'Manaus'),
(25, 'Felipe Aragão', 'felipe.aragão25@email.com', '2003-11-07', 'Manaus'),
(26, 'Fernanda Melo', 'fernanda.melo26@email.com', '1999-09-05', 'Cantá'),
(27, 'Gabriel Tavares', 'gabriel.tavares27@email.com', '2001-11-23', 'Boa Vista'),
(28, 'Giovana Matos', 'giovana.matos28@email.com', '2001-07-04', 'Bonfim'),
(29, 'Gustavo Siqueira', 'gustavo.siqueira29@email.com', '2007-08-02', 'Bonfim'),
(30, 'Helena Diniz', 'helena.diniz30@email.com', '2005-12-17', 'Boa Vista'),
(31, 'Henrique Paiva', 'henrique.paiva31@email.com', '2002-11-24', 'Bonfim'),
(32, 'Isabela Monteiro', 'isabela.monteiro32@email.com', '2005-12-03', 'Caracaraí'),
(33, 'Jéssica Andrade', 'jéssica.andrade33@email.com', '2003-02-27', 'Cantá'),
(34, 'João Pedro Neves', 'joão.pedro.neves34@email.com', '2002-02-01', 'Boa Vista'),
(35, 'Jonas Maciel', 'jonas.maciel35@email.com', '2003-11-03', 'Manaus'),
(36, 'Júlia Peixoto', 'júlia.peixoto36@email.com', '2000-11-23', 'Rorainópolis'),
(37, 'Karen Cristina Alves', 'karen.cristina.alves37@email.com', '2002-03-02', 'Boa Vista'),
(38, 'Larissa Nascimento', 'larissa.nascimento38@email.com', '2001-06-22', 'Boa Vista'),
(39, 'Leonardo Cunha', 'leonardo.cunha39@email.com', '2001-09-09', 'Pacaraima'),
(40, 'Letícia Moreira', 'letícia.moreira40@email.com', '1999-03-01', 'Boa Vista'),
(41, 'Lucas Vinícius Rocha', 'lucas.vinícius.rocha41@email.com', '1999-10-16', 'Caracaraí'),
(42, 'Luana Barbosa', 'luana.barbosa42@email.com', '2004-06-04', 'Mucajaí'),
(43, 'Marcelo Torres', 'marcelo.torres43@email.com', '2006-03-02', 'Boa Vista'),
(44, 'Mariana Rios', 'mariana.rios44@email.com', '2007-01-07', 'Boa Vista'),
(45, 'Mateus Cardoso', 'mateus.cardoso45@email.com', '2005-11-13', 'Boa Vista'),
(46, 'Milena Teodoro', 'milena.teodoro46@email.com', '2004-08-09', 'Boa Vista'),
(47, 'Natália Campos', 'natália.campos47@email.com', '2001-02-09', 'Alto Alegre'),
(48, 'Nicolas Pacheco', 'nicolas.pacheco48@email.com', '2007-03-06', 'Bonfim'),
(49, 'Patrícia Lemos', 'patrícia.lemos49@email.com', '2003-01-01', 'Pacaraima'),
(50, 'Paulo Ricardo Silva', 'paulo.ricardo.silva50@email.com', '2007-05-02', 'Bonfim'),
(51, 'Rafaela Correia', 'rafaela.correia51@email.com', '1998-05-25', 'Cantá'),
(52, 'Ramon Vieira', 'ramon.vieira52@email.com', '2001-11-26', 'Normandia'),
(53, 'Renata Chaves', 'renata.chaves53@email.com', '2001-08-18', 'Manaus'),
(54, 'Ricardo Benevides', 'ricardo.benevides54@email.com', '2003-06-09', 'Bonfim'),
(55, 'Roberta Farias', 'roberta.farias55@email.com', '1998-12-13', 'Caracaraí'),
(56, 'Rodrigo Holanda', 'rodrigo.holanda56@email.com', '1999-03-28', 'Cantá'),
(57, 'Sabrina Mota', 'sabrina.mota57@email.com', '2007-09-21', 'Manaus'),
(58, 'Samuel Pinheiro', 'samuel.pinheiro58@email.com', '2006-05-07', 'Boa Vista'),
(59, 'Sara Beatriz Costa', 'sara.beatriz.costa59@email.com', '2006-03-12', 'Bonfim'),
(60, 'Talita Xavier', 'talita.xavier60@email.com', '2006-08-23', 'Pacaraima');
INSERT INTO matriculas (id_matricula, id_aluno, id_turma, data_matricula, status) VALUES
(1, 1, 1, '2026-01-02', 'Ativa'),
(2, 2, 1, '2026-01-03', 'Ativa'),
(3, 3, 1, '2026-01-04', 'Ativa'),
(4, 4, 1, '2026-01-05', 'Ativa'),
(5, 5, 1, '2026-01-06', 'Ativa'),
(6, 6, 1, '2026-01-07', 'Ativa'),
(7, 7, 1, '2026-01-08', 'Ativa'),
(8, 8, 1, '2026-01-09', 'Ativa'),
(9, 9, 1, '2026-01-10', 'Ativa'),
(10, 10, 1, '2026-01-11', 'Ativa'),
(11, 11, 1, '2026-01-12', 'Ativa'),
(12, 12, 1, '2026-01-13', 'Ativa'),
(13, 13, 1, '2026-01-14', 'Ativa'),
(14, 14, 1, '2026-01-15', 'Ativa'),
(15, 15, 1, '2026-01-16', 'Ativa'),
(16, 16, 1, '2026-01-17', 'Ativa'),
(17, 17, 1, '2026-01-18', 'Ativa'),
(18, 18, 1, '2026-01-19', 'Ativa'),
(19, 19, 1, '2026-01-20', 'Ativa'),
(20, 20, 1, '2026-01-21', 'Ativa'),
(21, 21, 1, '2026-01-22', 'Ativa'),
(22, 22, 1, '2026-01-23', 'Ativa'),
(23, 23, 1, '2026-01-24', 'Ativa'),
(24, 24, 1, '2026-01-25', 'Ativa'),
(25, 25, 1, '2026-01-26', 'Ativa'),
(26, 26, 1, '2026-01-27', 'Ativa'),
(27, 27, 1, '2026-01-28', 'Ativa'),
(28, 28, 1, '2026-01-01', 'Ativa'),
(29, 29, 1, '2026-01-02', 'Ativa'),
(30, 30, 1, '2026-01-03', 'Ativa'),
(31, 31, 2, '2026-01-04', 'Ativa'),
(32, 32, 2, '2026-01-05', 'Ativa'),
(33, 33, 2, '2026-01-06', 'Ativa'),
(34, 34, 2, '2026-01-07', 'Ativa'),
(35, 35, 2, '2026-01-08', 'Ativa'),
(36, 36, 2, '2026-01-09', 'Ativa'),
(37, 37, 2, '2026-01-10', 'Ativa'),
(38, 38, 2, '2026-01-11', 'Ativa'),
(39, 39, 2, '2026-01-12', 'Ativa'),
(40, 40, 2, '2026-01-13', 'Ativa'),
(41, 41, 2, '2026-01-14', 'Ativa'),
(42, 42, 2, '2026-01-15', 'Ativa'),
(43, 43, 2, '2026-01-16', 'Ativa'),
(44, 44, 2, '2026-01-17', 'Ativa'),
(45, 45, 2, '2026-01-18', 'Ativa'),
(46, 46, 2, '2026-01-19', 'Ativa'),
(47, 47, 2, '2026-01-20', 'Ativa'),
(48, 48, 2, '2026-01-21', 'Ativa'),
(49, 49, 2, '2026-01-22', 'Ativa'),
(50, 50, 2, '2026-01-23', 'Ativa'),
(51, 51, 2, '2026-01-24', 'Ativa'),
(52, 52, 2, '2026-01-25', 'Ativa'),
(53, 53, 2, '2026-01-26', 'Ativa'),
(54, 54, 2, '2026-01-27', 'Ativa'),
(55, 55, 2, '2026-01-28', 'Ativa'),
(56, 56, 2, '2026-01-01', 'Ativa'),
(57, 57, 2, '2026-01-02', 'Ativa'),
(58, 58, 2, '2026-01-03', 'Ativa'),
(59, 59, 2, '2026-01-04', 'Ativa'),
(60, 60, 2, '2026-01-05', 'Ativa');
INSERT INTO ofertas_modulo (id_oferta, id_turma, id_modulo, id_professor, turno, data_inicio, data_fim) VALUES
(1, 1, 1, 3, 'Noite', '2026-02-01', '2026-06-30'),
(2, 1, 2, 2, 'Noite', '2026-02-01', '2026-06-30'),
(3, 1, 3, 7, 'Noite', '2026-02-01', '2026-06-30'),
(4, 1, 4, 1, 'Noite', '2026-02-01', '2026-06-30'),
(5, 1, 5, 4, 'Noite', '2026-02-01', '2026-06-30'),
(6, 1, 6, 2, 'Noite', '2026-02-01', '2026-06-30'),
(7, 1, 7, 5, 'Noite', '2026-02-01', '2026-06-30'),
(8, 1, 8, 6, 'Noite', '2026-02-01', '2026-06-30'),
(9, 2, 1, 9, 'Tarde', '2026-02-01', '2026-06-30'),
(10, 2, 2, 7, 'Tarde', '2026-02-01', '2026-06-30'),
(11, 2, 3, 2, 'Tarde', '2026-02-01', '2026-06-30'),
(12, 2, 4, 8, 'Tarde', '2026-02-01', '2026-06-30'),
(13, 2, 5, 10, 'Tarde', '2026-02-01', '2026-06-30'),
(14, 2, 6, 7, 'Tarde', '2026-02-01', '2026-06-30'),
(15, 2, 7, 10, 'Tarde', '2026-02-01', '2026-06-30'),
(16, 2, 8, 4, 'Tarde', '2026-02-01', '2026-06-30');
INSERT INTO notas_modulo (id_nota, id_matricula, id_modulo, nota1, nota2, nota3, media) VALUES
(1, 1, 1, 4.5, 5.5, 5.4, 5.13),
(2, 1, 2, 5.3, 6.6, 4.6, 5.5),
(3, 1, 3, 6.3, 6.0, 6.4, 6.23),
(4, 1, 4, 5.2, 7.2, 5.8, 6.07),
(5, 1, 5, 5.3, 6.5, 7.2, 6.33),
(6, 1, 6, 5.9, 6.3, 7.7, 6.63),
(7, 1, 7, 5.7, 6.5, 7.5, 6.57),
(8, 1, 8, 6.2, 7.2, 6.1, 6.5),
(9, 2, 1, 5.9, 4.5, 5.7, 5.37),
(10, 2, 2, 6.8, 5.2, 5.3, 5.77),
(11, 2, 3, 5.6, 7.0, 6.2, 6.27),
(12, 2, 4, 6.4, 6.4, 5.9, 6.23),
(13, 2, 5, 7.0, 7.3, 5.5, 6.6),
(14, 2, 6, 6.2, 6.8, 7.9, 6.97),
(15, 2, 7, 7.5, 5.9, 6.4, 6.6),
(16, 2, 8, 6.4, 6.9, 8.2, 7.17),
(17, 3, 1, 6.7, 4.8, 6.7, 6.07),
(18, 3, 2, 6.7, 7.0, 5.1, 6.27),
(19, 3, 3, 5.7, 5.9, 5.3, 5.63),
(20, 3, 4, 6.2, 5.8, 5.8, 5.93),
(21, 3, 5, 7.0, 7.7, 7.7, 7.47),
(22, 3, 6, 6.9, 6.4, 7.1, 6.8),
(23, 3, 7, 6.2, 8.0, 7.8, 7.33),
(24, 3, 8, 7.6, 7.3, 6.9, 7.27),
(25, 4, 1, 5.2, 5.0, 6.0, 5.4),
(26, 4, 2, 5.7, 5.3, 5.8, 5.6),
(27, 4, 3, 6.8, 5.6, 5.5, 5.97),
(28, 4, 4, 7.0, 7.5, 6.4, 6.97),
(29, 4, 5, 6.9, 6.6, 6.8, 6.77),
(30, 4, 6, 7.9, 7.0, 6.4, 7.1),
(31, 4, 7, 7.8, 8.4, 6.4, 7.53),
(32, 4, 8, 8.4, 8.2, 6.6, 7.73),
(33, 5, 1, 5.4, 5.9, 4.7, 5.33),
(34, 5, 2, 4.6, 6.1, 4.7, 5.13),
(35, 5, 3, 6.4, 5.8, 6.0, 6.07),
(36, 5, 4, 5.3, 6.7, 6.6, 6.2),
(37, 5, 5, 6.1, 6.8, 6.9, 6.6),
(38, 5, 6, 6.9, 6.4, 7.2, 6.83),
(39, 5, 7, 6.6, 7.4, 6.0, 6.67),
(40, 5, 8, 6.4, 7.3, 6.4, 6.7),
(41, 6, 1, 4.9, 4.3, 6.4, 5.2),
(42, 6, 2, 5.9, 5.0, 5.6, 5.5),
(43, 6, 3, 6.6, 7.1, 5.0, 6.23),
(44, 6, 4, 6.7, 5.8, 5.8, 6.1),
(45, 6, 5, 7.5, 5.5, 6.5, 6.5),
(46, 6, 6, 6.7, 7.0, 5.7, 6.47),
(47, 6, 7, 7.6, 6.9, 7.9, 7.47),
(48, 6, 8, 6.9, 6.2, 7.2, 6.77),
(49, 7, 1, 6.1, 4.4, 4.7, 5.07),
(50, 7, 2, 7.0, 5.4, 5.8, 6.07),
(51, 7, 3, 5.2, 6.3, 6.5, 6.0),
(52, 7, 4, 5.7, 5.4, 5.5, 5.53),
(53, 7, 5, 7.1, 7.0, 7.0, 7.03),
(54, 7, 6, 7.2, 6.9, 6.4, 6.83),
(55, 7, 7, 7.7, 6.6, 7.9, 7.4),
(56, 7, 8, 7.9, 7.6, 7.6, 7.7),
(57, 8, 1, 5.4, 4.5, 5.8, 5.23),
(58, 8, 2, 7.1, 5.7, 7.0, 6.6),
(59, 8, 3, 7.3, 6.8, 5.2, 6.43),
(60, 8, 4, 7.3, 7.6, 5.9, 6.93),
(61, 8, 5, 6.9, 7.0, 6.2, 6.7),
(62, 8, 6, 7.5, 6.5, 6.7, 6.9),
(63, 8, 7, 6.2, 6.1, 6.8, 6.37),
(64, 8, 8, 6.4, 7.3, 8.2, 7.3),
(65, 9, 1, 4.7, 6.2, 5.7, 5.53),
(66, 9, 2, 5.8, 5.0, 6.1, 5.63),
(67, 9, 3, 5.7, 5.4, 6.5, 5.87),
(68, 9, 4, 7.6, 7.6, 7.8, 7.67),
(69, 9, 5, 5.9, 6.8, 6.1, 6.27),
(70, 9, 6, 6.9, 6.3, 6.5, 6.57),
(71, 9, 7, 6.3, 8.5, 6.6, 7.13),
(72, 9, 8, 7.4, 8.0, 7.6, 7.67),
(73, 10, 1, 4.7, 5.5, 4.9, 5.03),
(74, 10, 2, 4.9, 5.0, 5.6, 5.17),
(75, 10, 3, 6.9, 4.9, 5.6, 5.8),
(76, 10, 4, 5.2, 6.7, 6.7, 6.2),
(77, 10, 5, 6.9, 5.9, 7.3, 6.7),
(78, 10, 6, 7.2, 7.5, 6.4, 7.03),
(79, 10, 7, 7.0, 6.8, 6.0, 6.6),
(80, 10, 8, 6.3, 7.6, 5.9, 6.6),
(81, 11, 1, 4.3, 5.4, 5.5, 5.07),
(82, 11, 2, 5.0, 6.0, 6.7, 5.9),
(83, 11, 3, 7.0, 5.1, 5.3, 5.8),
(84, 11, 4, 7.1, 6.8, 6.4, 6.77),
(85, 11, 5, 6.8, 5.5, 7.3, 6.53),
(86, 11, 6, 5.8, 5.8, 7.3, 6.3),
(87, 11, 7, 8.0, 7.9, 7.3, 7.73),
(88, 11, 8, 6.8, 8.3, 7.4, 7.5),
(89, 12, 1, 6.0, 6.0, 5.7, 5.9),
(90, 12, 2, 5.1, 6.1, 4.9, 5.37),
(91, 12, 3, 5.6, 5.2, 5.0, 5.27),
(92, 12, 4, 6.7, 7.3, 6.5, 6.83),
(93, 12, 5, 7.4, 6.1, 5.6, 6.37),
(94, 12, 6, 5.8, 7.8, 7.4, 7.0),
(95, 12, 7, 5.9, 7.4, 7.3, 6.87),
(96, 12, 8, 7.9, 7.1, 7.7, 7.57),
(97, 13, 1, 6.3, 6.3, 4.9, 5.83),
(98, 13, 2, 5.4, 5.5, 5.0, 5.3),
(99, 13, 3, 6.8, 6.1, 6.9, 6.6),
(100, 13, 4, 6.5, 6.1, 7.6, 6.73),
(101, 13, 5, 6.2, 6.3, 7.8, 6.77),
(102, 13, 6, 5.9, 5.9, 7.4, 6.4),
(103, 13, 7, 6.1, 8.3, 7.2, 7.2),
(104, 13, 8, 7.2, 7.1, 7.5, 7.27),
(105, 14, 1, 5.9, 5.5, 6.9, 6.1),
(106, 14, 2, 6.4, 5.8, 5.4, 5.87),
(107, 14, 3, 6.6, 5.5, 7.5, 6.53),
(108, 14, 4, 5.5, 7.1, 7.4, 6.67),
(109, 14, 5, 6.6, 7.6, 7.7, 7.3),
(110, 14, 6, 7.6, 8.2, 6.7, 7.5),
(111, 14, 7, 8.3, 7.0, 8.1, 7.8),
(112, 14, 8, 7.1, 7.2, 7.2, 7.17),
(113, 15, 1, 4.7, 5.4, 4.5, 4.87),
(114, 15, 2, 6.2, 4.5, 4.7, 5.13),
(115, 15, 3, 5.1, 5.0, 6.3, 5.47),
(116, 15, 4, 6.4, 6.8, 5.9, 6.37),
(117, 15, 5, 6.6, 6.1, 7.4, 6.7),
(118, 15, 6, 6.4, 7.2, 7.6, 7.07),
(119, 15, 7, 5.8, 6.3, 6.2, 6.1),
(120, 15, 8, 6.1, 7.9, 7.3, 7.1),
(121, 16, 1, 5.3, 4.9, 5.3, 5.17),
(122, 16, 2, 6.5, 6.8, 5.4, 6.23),
(123, 16, 3, 5.3, 5.8, 5.9, 5.67),
(124, 16, 4, 5.2, 6.1, 5.7, 5.67),
(125, 16, 5, 7.3, 5.5, 7.5, 6.77),
(126, 16, 6, 7.2, 6.3, 7.3, 6.93),
(127, 16, 7, 7.8, 7.9, 6.9, 7.53),
(128, 16, 8, 8.2, 7.8, 6.0, 7.33),
(129, 17, 1, 4.9, 5.2, 4.9, 5.0),
(130, 17, 2, 5.5, 7.0, 5.5, 6.0),
(131, 17, 3, 5.0, 5.5, 5.7, 5.4),
(132, 17, 4, 5.2, 6.9, 6.1, 6.07),
(133, 17, 5, 6.8, 7.1, 7.0, 6.97),
(134, 17, 6, 7.0, 7.5, 6.8, 7.1),
(135, 17, 7, 7.3, 6.1, 7.1, 6.83),
(136, 17, 8, 6.2, 7.0, 6.6, 6.6),
(137, 18, 1, 4.7, 4.6, 4.7, 4.67),
(138, 18, 2, 6.5, 6.6, 6.0, 6.37),
(139, 18, 3, 5.4, 6.2, 6.7, 6.1),
(140, 18, 4, 5.5, 5.6, 5.9, 5.67),
(141, 18, 5, 6.1, 6.3, 5.6, 6.0),
(142, 18, 6, 6.7, 6.7, 6.5, 6.63),
(143, 18, 7, 7.5, 7.6, 6.6, 7.23),
(144, 18, 8, 8.5, 6.4, 6.9, 7.27),
(145, 19, 1, 4.8, 5.0, 6.9, 5.57),
(146, 19, 2, 6.3, 7.0, 7.3, 6.87),
(147, 19, 3, 6.0, 6.7, 5.9, 6.2),
(148, 19, 4, 6.6, 6.8, 5.7, 6.37),
(149, 19, 5, 7.9, 6.9, 7.9, 7.57),
(150, 19, 6, 6.6, 6.3, 8.0, 6.97),
(151, 19, 7, 6.2, 7.5, 8.4, 7.37),
(152, 19, 8, 8.2, 7.8, 7.0, 7.67),
(153, 20, 1, 5.9, 5.0, 6.3, 5.73),
(154, 20, 2, 4.9, 4.6, 4.7, 4.73),
(155, 20, 3, 6.4, 5.2, 5.3, 5.63),
(156, 20, 4, 6.2, 5.0, 6.6, 5.93),
(157, 20, 5, 6.9, 5.7, 5.1, 5.9),
(158, 20, 6, 6.0, 5.4, 7.4, 6.27),
(159, 20, 7, 6.8, 7.7, 7.3, 7.27),
(160, 20, 8, 6.0, 7.7, 7.6, 7.1),
(161, 21, 1, 5.7, 4.9, 5.4, 5.33),
(162, 21, 2, 6.0, 4.8, 4.9, 5.23),
(163, 21, 3, 6.1, 6.3, 6.5, 6.3),
(164, 21, 4, 6.4, 7.2, 7.1, 6.9),
(165, 21, 5, 6.4, 6.2, 6.6, 6.4),
(166, 21, 6, 7.5, 7.1, 7.6, 7.4),
(167, 21, 7, 6.5, 6.0, 7.8, 6.77),
(168, 21, 8, 8.2, 6.9, 7.2, 7.43),
(169, 22, 1, 4.9, 5.1, 5.6, 5.2),
(170, 22, 2, 6.3, 5.2, 5.6, 5.7),
(171, 22, 3, 6.6, 6.7, 6.5, 6.6),
(172, 22, 4, 6.1, 5.7, 6.3, 6.03),
(173, 22, 5, 7.3, 6.8, 7.6, 7.23),
(174, 22, 6, 6.2, 7.0, 6.9, 6.7),
(175, 22, 7, 6.4, 7.4, 6.4, 6.73),
(176, 22, 8, 7.3, 8.1, 6.5, 7.3),
(177, 23, 1, 6.5, 5.5, 5.8, 5.93),
(178, 23, 2, 5.3, 5.6, 4.9, 5.27),
(179, 23, 3, 6.7, 6.6, 5.6, 6.3),
(180, 23, 4, 7.5, 5.7, 7.2, 6.8),
(181, 23, 5, 6.3, 5.9, 7.2, 6.47),
(182, 23, 6, 6.1, 6.3, 7.0, 6.47),
(183, 23, 7, 7.3, 6.2, 8.2, 7.23),
(184, 23, 8, 7.2, 6.3, 7.3, 6.93),
(185, 24, 1, 6.4, 5.5, 5.6, 5.83),
(186, 24, 2, 5.0, 7.0, 6.6, 6.2),
(187, 24, 3, 5.5, 6.7, 7.4, 6.53),
(188, 24, 4, 6.0, 7.2, 6.6, 6.6),
(189, 24, 5, 6.4, 6.5, 6.0, 6.3),
(190, 24, 6, 7.4, 7.0, 8.3, 7.57),
(191, 24, 7, 6.2, 7.2, 7.7, 7.03),
(192, 24, 8, 8.8, 7.6, 6.9, 7.77),
(193, 25, 1, 6.1, 5.9, 6.3, 6.1),
(194, 25, 2, 5.5, 4.4, 6.5, 5.47),
(195, 25, 3, 4.9, 5.9, 4.9, 5.23),
(196, 25, 4, 4.8, 7.0, 4.8, 5.53),
(197, 25, 5, 5.1, 6.7, 6.8, 6.2),
(198, 25, 6, 5.4, 7.0, 7.2, 6.53),
(199, 25, 7, 6.0, 7.0, 6.5, 6.5),
(200, 25, 8, 6.0, 7.8, 6.4, 6.73),
(201, 26, 1, 4.4, 5.4, 5.8, 5.2),
(202, 26, 2, 6.7, 6.5, 5.7, 6.3),
(203, 26, 3, 5.3, 6.9, 6.0, 6.07),
(204, 26, 4, 6.5, 6.5, 7.2, 6.73),
(205, 26, 5, 7.6, 6.7, 7.4, 7.23),
(206, 26, 6, 7.4, 7.2, 6.2, 6.93),
(207, 26, 7, 6.8, 5.9, 7.0, 6.57),
(208, 26, 8, 6.2, 7.3, 6.0, 6.5),
(209, 27, 1, 4.4, 5.1, 4.4, 4.63),
(210, 27, 2, 5.2, 6.5, 6.2, 5.97),
(211, 27, 3, 5.7, 6.3, 5.5, 5.83),
(212, 27, 4, 6.2, 6.6, 7.5, 6.77),
(213, 27, 5, 6.7, 7.7, 5.4, 6.6),
(214, 27, 6, 5.7, 7.3, 7.1, 6.7),
(215, 27, 7, 6.7, 8.0, 7.4, 7.37),
(216, 27, 8, 7.7, 8.0, 7.9, 7.87),
(217, 28, 1, 6.7, 4.7, 6.5, 5.97),
(218, 28, 2, 5.6, 7.0, 6.8, 6.47),
(219, 28, 3, 7.3, 7.1, 6.5, 6.97),
(220, 28, 4, 6.5, 6.5, 6.1, 6.37),
(221, 28, 5, 6.0, 5.9, 7.7, 6.53),
(222, 28, 6, 5.9, 6.4, 6.3, 6.2),
(223, 28, 7, 6.1, 6.0, 7.2, 6.43),
(224, 28, 8, 7.7, 8.3, 7.4, 7.8),
(225, 29, 1, 5.6, 4.9, 5.0, 5.17),
(226, 29, 2, 6.5, 7.0, 7.1, 6.87),
(227, 29, 3, 5.2, 5.8, 6.0, 5.67),
(228, 29, 4, 7.2, 5.9, 5.6, 6.23),
(229, 29, 5, 5.7, 7.3, 5.8, 6.27),
(230, 29, 6, 6.9, 8.1, 6.6, 7.2),
(231, 29, 7, 6.5, 6.5, 6.3, 6.43),
(232, 29, 8, 8.1, 7.7, 8.5, 8.1),
(233, 30, 1, 4.9, 4.8, 5.7, 5.13),
(234, 30, 2, 4.9, 6.0, 5.6, 5.5),
(235, 30, 3, 6.4, 5.8, 6.7, 6.3),
(236, 30, 4, 4.9, 4.9, 5.6, 5.13),
(237, 30, 5, 7.2, 5.5, 6.7, 6.47),
(238, 30, 6, 5.5, 5.5, 5.5, 5.5),
(239, 30, 7, 7.5, 6.9, 5.9, 6.77),
(240, 30, 8, 7.1, 6.4, 7.9, 7.13),
(241, 31, 1, 5.6, 6.2, 5.4, 5.73),
(242, 31, 2, 5.6, 6.4, 6.1, 6.03),
(243, 31, 3, 6.6, 5.1, 4.9, 5.53),
(244, 31, 4, 5.2, 5.6, 5.4, 5.4),
(245, 31, 5, 7.6, 5.6, 6.3, 6.5),
(246, 31, 6, 5.8, 6.5, 5.8, 6.03),
(247, 31, 7, 7.6, 6.7, 5.8, 6.7),
(248, 31, 8, 7.1, 7.3, 6.5, 6.97),
(249, 32, 1, 5.4, 5.4, 4.5, 5.1),
(250, 32, 2, 6.1, 6.0, 7.0, 6.37),
(251, 32, 3, 5.8, 5.2, 7.2, 6.07),
(252, 32, 4, 6.6, 5.2, 5.1, 5.63),
(253, 32, 5, 7.2, 6.3, 6.7, 6.73),
(254, 32, 6, 5.8, 7.2, 6.1, 6.37),
(255, 32, 7, 6.8, 7.1, 7.2, 7.03),
(256, 32, 8, 7.6, 7.2, 7.7, 7.5),
(257, 33, 1, 5.4, 4.9, 5.3, 5.2),
(258, 33, 2, 6.8, 5.8, 4.9, 5.83),
(259, 33, 3, 5.2, 5.5, 6.6, 5.77),
(260, 33, 4, 7.6, 6.2, 5.5, 6.43),
(261, 33, 5, 7.1, 5.8, 6.9, 6.6),
(262, 33, 6, 7.5, 6.2, 8.0, 7.23),
(263, 33, 7, 8.2, 8.3, 7.5, 8.0),
(264, 33, 8, 7.9, 6.5, 7.0, 7.13),
(265, 34, 1, 6.6, 5.7, 6.0, 6.1),
(266, 34, 2, 6.4, 5.7, 5.6, 5.9),
(267, 34, 3, 6.8, 6.4, 6.1, 6.43),
(268, 34, 4, 7.8, 6.5, 7.3, 7.2),
(269, 34, 5, 6.6, 7.5, 6.7, 6.93),
(270, 34, 6, 8.0, 6.9, 7.9, 7.6),
(271, 34, 7, 8.4, 6.8, 7.2, 7.47),
(272, 34, 8, 7.4, 8.1, 8.5, 8.0),
(273, 35, 1, 4.5, 4.3, 4.7, 4.5),
(274, 35, 2, 5.2, 5.9, 4.8, 5.3),
(275, 35, 3, 5.2, 6.7, 5.1, 5.67),
(276, 35, 4, 7.0, 5.2, 5.4, 5.87),
(277, 35, 5, 5.3, 5.9, 6.2, 5.8),
(278, 35, 6, 5.7, 6.0, 7.6, 6.43),
(279, 35, 7, 7.9, 6.0, 5.8, 6.57),
(280, 35, 8, 6.1, 6.0, 5.9, 6.0),
(281, 36, 1, 4.9, 6.5, 6.0, 5.8),
(282, 36, 2, 5.0, 5.8, 6.3, 5.7),
(283, 36, 3, 5.4, 6.2, 4.7, 5.43),
(284, 36, 4, 5.4, 6.8, 5.0, 5.73),
(285, 36, 5, 6.2, 6.8, 5.3, 6.1),
(286, 36, 6, 7.4, 6.5, 6.6, 6.83),
(287, 36, 7, 5.8, 8.1, 7.3, 7.07),
(288, 36, 8, 6.6, 7.1, 7.5, 7.07),
(289, 37, 1, 5.4, 4.7, 4.6, 4.9),
(290, 37, 2, 6.1, 6.8, 4.9, 5.93),
(291, 37, 3, 5.8, 5.4, 6.3, 5.83),
(292, 37, 4, 6.5, 6.1, 5.7, 6.1),
(293, 37, 5, 7.0, 7.6, 5.5, 6.7),
(294, 37, 6, 6.0, 7.1, 6.8, 6.63),
(295, 37, 7, 6.9, 6.3, 7.2, 6.8),
(296, 37, 8, 8.2, 6.9, 6.2, 7.1),
(297, 38, 1, 6.2, 5.5, 4.7, 5.47),
(298, 38, 2, 6.5, 6.2, 6.7, 6.47),
(299, 38, 3, 5.6, 6.8, 6.1, 6.17),
(300, 38, 4, 5.9, 7.0, 5.9, 6.27),
(301, 38, 5, 7.0, 6.8, 6.6, 6.8),
(302, 38, 6, 6.0, 6.6, 7.6, 6.73),
(303, 38, 7, 7.7, 7.8, 7.5, 7.67),
(304, 38, 8, 7.5, 6.3, 8.5, 7.43),
(305, 39, 1, 5.4, 6.7, 6.7, 6.27),
(306, 39, 2, 6.1, 6.6, 6.6, 6.43),
(307, 39, 3, 5.4, 6.6, 5.4, 5.8),
(308, 39, 4, 7.7, 6.0, 7.0, 6.9),
(309, 39, 5, 5.9, 6.6, 7.3, 6.6),
(310, 39, 6, 6.6, 7.5, 5.9, 6.67),
(311, 39, 7, 7.0, 7.2, 7.4, 7.2),
(312, 39, 8, 8.2, 8.5, 8.0, 8.23),
(313, 40, 1, 5.9, 5.0, 5.4, 5.43),
(314, 40, 2, 5.0, 6.3, 4.5, 5.27),
(315, 40, 3, 6.7, 5.9, 5.4, 6.0),
(316, 40, 4, 6.9, 5.2, 6.9, 6.33),
(317, 40, 5, 5.7, 6.0, 6.5, 6.07),
(318, 40, 6, 5.9, 7.4, 7.4, 6.9),
(319, 40, 7, 6.5, 6.9, 6.9, 6.77),
(320, 40, 8, 6.7, 8.0, 6.2, 6.97),
(321, 41, 1, 4.6, 5.7, 4.8, 5.03),
(322, 41, 2, 6.2, 6.0, 4.7, 5.63),
(323, 41, 3, 5.3, 5.9, 4.8, 5.33),
(324, 41, 4, 5.6, 6.1, 6.6, 6.1),
(325, 41, 5, 6.1, 5.2, 7.5, 6.27),
(326, 41, 6, 6.0, 6.3, 6.8, 6.37),
(327, 41, 7, 7.4, 8.0, 7.3, 7.57),
(328, 41, 8, 7.8, 7.4, 7.8, 7.67),
(329, 42, 1, 6.3, 4.4, 4.5, 5.07),
(330, 42, 2, 5.9, 6.4, 5.8, 6.03),
(331, 42, 3, 6.8, 5.1, 6.4, 6.1),
(332, 42, 4, 6.2, 7.1, 5.7, 6.33),
(333, 42, 5, 6.5, 6.2, 7.0, 6.57),
(334, 42, 6, 6.1, 7.9, 7.7, 7.23),
(335, 42, 7, 7.5, 7.9, 6.2, 7.2),
(336, 42, 8, 8.4, 6.6, 7.1, 7.37),
(337, 43, 1, 6.5, 5.6, 4.6, 5.57),
(338, 43, 2, 5.8, 5.2, 4.9, 5.3),
(339, 43, 3, 5.1, 6.4, 6.3, 5.93),
(340, 43, 4, 6.1, 6.2, 6.0, 6.1),
(341, 43, 5, 7.7, 5.8, 7.6, 7.03),
(342, 43, 6, 8.0, 7.0, 7.3, 7.43),
(343, 43, 7, 8.3, 6.4, 6.0, 6.9),
(344, 43, 8, 7.1, 8.6, 6.6, 7.43),
(345, 44, 1, 5.4, 6.7, 6.0, 6.03),
(346, 44, 2, 7.1, 6.0, 6.5, 6.53),
(347, 44, 3, 5.9, 7.4, 5.5, 6.27),
(348, 44, 4, 7.5, 7.7, 6.4, 7.2),
(349, 44, 5, 7.3, 6.8, 7.4, 7.17),
(350, 44, 6, 6.1, 8.3, 7.1, 7.17),
(351, 44, 7, 8.1, 7.4, 6.8, 7.43),
(352, 44, 8, 6.8, 7.7, 7.4, 7.3),
(353, 45, 1, 5.6, 4.8, 5.3, 5.23),
(354, 45, 2, 4.5, 5.9, 5.5, 5.3),
(355, 45, 3, 5.2, 4.8, 5.7, 5.23),
(356, 45, 4, 5.0, 6.9, 5.9, 5.93),
(357, 45, 5, 6.7, 5.8, 5.3, 5.93),
(358, 45, 6, 6.3, 5.8, 7.3, 6.47),
(359, 45, 7, 5.6, 5.8, 7.7, 6.37),
(360, 45, 8, 5.9, 7.4, 7.3, 6.87),
(361, 46, 1, 5.1, 6.4, 4.9, 5.47),
(362, 46, 2, 5.1, 6.5, 5.1, 5.57),
(363, 46, 3, 4.9, 6.0, 6.5, 5.8),
(364, 46, 4, 5.8, 5.9, 5.7, 5.8),
(365, 46, 5, 6.7, 6.4, 6.8, 6.63),
(366, 46, 6, 6.4, 7.2, 6.8, 6.8),
(367, 46, 7, 6.1, 6.7, 7.2, 6.67),
(368, 46, 8, 7.8, 6.9, 6.7, 7.13),
(369, 47, 1, 6.5, 5.8, 6.6, 6.3),
(370, 47, 2, 6.7, 5.7, 5.5, 5.97),
(371, 47, 3, 6.5, 6.6, 5.6, 6.23),
(372, 47, 4, 5.8, 5.8, 5.7, 5.77),
(373, 47, 5, 6.3, 6.5, 7.2, 6.67),
(374, 47, 6, 5.8, 6.6, 6.3, 6.23),
(375, 47, 7, 6.6, 6.5, 7.7, 6.93),
(376, 47, 8, 6.2, 7.9, 8.1, 7.4),
(377, 48, 1, 5.6, 6.5, 6.7, 6.27),
(378, 48, 2, 5.4, 5.5, 6.5, 5.8),
(379, 48, 3, 5.7, 6.1, 6.0, 5.93),
(380, 48, 4, 6.9, 7.0, 7.4, 7.1),
(381, 48, 5, 7.6, 7.4, 7.3, 7.43),
(382, 48, 6, 7.6, 5.8, 7.7, 7.03),
(383, 48, 7, 6.1, 8.3, 6.1, 6.83),
(384, 48, 8, 6.7, 6.9, 6.4, 6.67),
(385, 49, 1, 5.1, 5.2, 6.4, 5.57),
(386, 49, 2, 6.9, 6.5, 5.9, 6.43),
(387, 49, 3, 6.0, 6.4, 5.3, 5.9),
(388, 49, 4, 6.9, 5.7, 6.5, 6.37),
(389, 49, 5, 6.4, 8.0, 6.0, 6.8),
(390, 49, 6, 7.3, 6.0, 7.3, 6.87),
(391, 49, 7, 6.5, 7.0, 8.2, 7.23),
(392, 49, 8, 7.2, 8.2, 8.3, 7.9),
(393, 50, 1, 4.6, 5.7, 5.6, 5.3),
(394, 50, 2, 6.5, 4.6, 5.3, 5.47),
(395, 50, 3, 6.8, 5.6, 6.9, 6.43),
(396, 50, 4, 7.0, 5.6, 6.2, 6.27),
(397, 50, 5, 6.4, 6.1, 6.6, 6.37),
(398, 50, 6, 7.6, 6.3, 5.6, 6.5),
(399, 50, 7, 6.1, 7.5, 7.2, 6.93),
(400, 50, 8, 6.9, 7.3, 6.0, 6.73),
(401, 51, 1, 5.2, 5.2, 5.8, 5.4),
(402, 51, 2, 5.7, 4.8, 6.3, 5.6),
(403, 51, 3, 5.0, 4.7, 6.7, 5.47),
(404, 51, 4, 6.6, 6.7, 6.4, 6.57),
(405, 51, 5, 6.4, 6.6, 7.3, 6.77),
(406, 51, 6, 7.4, 7.8, 6.7, 7.3),
(407, 51, 7, 6.9, 5.8, 5.8, 6.17),
(408, 51, 8, 7.7, 8.1, 8.0, 7.93),
(409, 52, 1, 5.3, 5.7, 4.5, 5.17),
(410, 52, 2, 5.9, 6.0, 6.0, 5.97),
(411, 52, 3, 6.9, 4.9, 6.0, 5.93),
(412, 52, 4, 5.4, 6.4, 6.5, 6.1),
(413, 52, 5, 6.8, 6.7, 5.7, 6.4),
(414, 52, 6, 7.6, 6.0, 6.0, 6.53),
(415, 52, 7, 7.8, 6.5, 7.3, 7.2),
(416, 52, 8, 8.5, 6.8, 7.6, 7.63),
(417, 53, 1, 5.0, 5.9, 6.1, 5.67),
(418, 53, 2, 5.3, 6.9, 5.4, 5.87),
(419, 53, 3, 5.7, 6.4, 5.9, 6.0),
(420, 53, 4, 6.4, 5.3, 7.2, 6.3),
(421, 53, 5, 5.9, 7.3, 6.9, 6.7),
(422, 53, 6, 6.0, 7.5, 8.0, 7.17),
(423, 53, 7, 7.3, 7.6, 6.9, 7.27),
(424, 53, 8, 6.9, 8.4, 7.9, 7.73),
(425, 54, 1, 4.9, 4.8, 4.7, 4.8),
(426, 54, 2, 7.3, 6.7, 6.6, 6.87),
(427, 54, 3, 5.9, 6.5, 6.4, 6.27),
(428, 54, 4, 6.5, 7.2, 5.6, 6.43),
(429, 54, 5, 6.1, 6.2, 7.4, 6.57),
(430, 54, 6, 6.0, 6.3, 7.1, 6.47),
(431, 54, 7, 7.8, 6.6, 7.4, 7.27),
(432, 54, 8, 8.3, 8.3, 6.9, 7.83),
(433, 55, 1, 5.9, 4.7, 5.1, 5.23),
(434, 55, 2, 6.1, 4.6, 4.5, 5.07),
(435, 55, 3, 4.6, 5.2, 6.0, 5.27),
(436, 55, 4, 6.4, 6.0, 6.2, 6.2),
(437, 55, 5, 6.8, 5.3, 6.7, 6.27),
(438, 55, 6, 5.6, 5.9, 7.4, 6.3),
(439, 55, 7, 7.0, 6.8, 6.1, 6.63),
(440, 55, 8, 7.7, 7.1, 7.8, 7.53),
(441, 56, 1, 5.3, 4.7, 4.9, 4.97),
(442, 56, 2, 4.5, 5.7, 5.5, 5.23),
(443, 56, 3, 7.1, 6.0, 6.1, 6.4),
(444, 56, 4, 5.9, 5.2, 7.1, 6.07),
(445, 56, 5, 5.5, 6.9, 5.3, 5.9),
(446, 56, 6, 6.6, 6.2, 5.9, 6.23),
(447, 56, 7, 7.8, 6.8, 6.2, 6.93),
(448, 56, 8, 7.7, 6.5, 8.2, 7.47),
(449, 57, 1, 5.2, 4.6, 6.0, 5.27),
(450, 57, 2, 6.4, 6.9, 6.5, 6.6),
(451, 57, 3, 5.6, 6.3, 6.5, 6.13),
(452, 57, 4, 6.5, 5.6, 6.9, 6.33),
(453, 57, 5, 5.7, 6.0, 6.0, 5.9),
(454, 57, 6, 8.0, 7.5, 6.9, 7.47),
(455, 57, 7, 7.8, 6.2, 6.7, 6.9),
(456, 57, 8, 8.1, 7.9, 7.7, 7.9),
(457, 58, 1, 6.5, 6.0, 6.1, 6.2),
(458, 58, 2, 5.5, 6.8, 5.3, 5.87),
(459, 58, 3, 5.0, 6.5, 6.7, 6.07),
(460, 58, 4, 5.9, 7.6, 7.6, 7.03),
(461, 58, 5, 5.9, 7.5, 5.8, 6.4),
(462, 58, 6, 8.0, 7.0, 6.3, 7.1),
(463, 58, 7, 7.9, 6.8, 6.2, 6.97),
(464, 58, 8, 8.0, 8.6, 6.8, 7.8),
(465, 59, 1, 5.9, 5.2, 6.6, 5.9),
(466, 59, 2, 5.8, 7.1, 6.2, 6.37),
(467, 59, 3, 5.6, 5.6, 6.7, 5.97),
(468, 59, 4, 6.8, 5.8, 6.4, 6.33),
(469, 59, 5, 6.7, 7.1, 6.3, 6.7),
(470, 59, 6, 6.4, 6.8, 6.1, 6.43),
(471, 59, 7, 7.7, 8.4, 7.1, 7.73),
(472, 59, 8, 8.1, 8.5, 8.5, 8.37),
(473, 60, 1, 4.2, 5.2, 6.1, 5.17),
(474, 60, 2, 6.6, 6.5, 4.6, 5.9),
(475, 60, 3, 4.7, 5.8, 6.1, 5.53),
(476, 60, 4, 5.2, 5.2, 5.2, 5.2),
(477, 60, 5, 5.3, 7.2, 6.0, 6.17),
(478, 60, 6, 6.8, 6.0, 6.2, 6.33),
(479, 60, 7, 6.1, 6.8, 7.9, 6.93),
(480, 60, 8, 7.3, 7.9, 8.2, 7.8);
