// der-schema.dbml
// Fonte usada para gerar der-escola.svg. Se quebrar algo a gente pode editar depois,
// cole este código em https://dbdiagram.io/ e exporte PNG/SVG de novo.

Table professores {
  id_professor int [pk]
  nome varchar
  email varchar [unique]
  area varchar
}

Table cursos {
  id_curso int [pk]
  nome varchar
  carga_horaria int
  area varchar
}

Table turmas {
  id_turma int [pk]
  id_curso int
  id_professor int
  nome_turma varchar
  turno varchar
  periodo varchar
  capacidade int
}

Table alunos {
  id_aluno int [pk]
  nome varchar
  email varchar [unique]
  data_nascimento date
  cidade varchar
}

Table matriculas {
  id_matricula int [pk]
  id_aluno int
  id_turma int
  data_matricula date
  status varchar
}

Table notas {
  id_nota int [pk]
  id_matricula int
  nota1 decimal
  nota2 decimal
  nota3 decimal
  media decimal
}

Ref: turmas.id_curso > cursos.id_curso
Ref: turmas.id_professor > professores.id_professor
Ref: matriculas.id_aluno > alunos.id_aluno
Ref: matriculas.id_turma > turmas.id_turma
Ref: notas.id_matricula > matriculas.id_matricula
